# Installation
set(SGAL_BOOST_INCLUDE_DIRS
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  CACHE PATH "SCGAL source include directories")

install(DIRECTORY ${SGAL_BOOST_INCLUDE_DIRS}/boost
        DESTINATION ${SGAL_INSTALL_INC_DIR}
        FILES_MATCHING PATTERN "*.hpp"
        # PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
